# MFO

./: app.py  main.py  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
