[project]
name = "myfaceonly"
version = "0.1.0"
# ... 其他元数据

dependencies = [
    # 强制使用兼容 Dlib 的 NumPy 版本
    "numpy==1.26.4",
    # 你的核心 Streamlit 应用依赖
    "streamlit>=1.51.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.0.0",
    
    # face-recognition 依赖 Dlib，Dlib 需要编译
    # 确保模型文件也能被下载，虽然部署环境可能默认使用 PyPI 的 face-recognition-models
    
]